--- a/style/base.css
+++ b/style/base.css
@@ -273,3 +273,16 @@ a:active {
 .img4 {
   width:250px;height:auto
 }
+
+.title{
+  font-size:50px
+}
+.skills{
+  font-size:20px
+}
+.lesson{
+  font-size:15px
+}
+.description{
+  font-size:20px
+}
