--- a/style/style.css
+++ b/style/style.css
@@ -25,6 +25,7 @@ box-shadow: 0px 23px 30px -15px rgba(0,0,0,0.75);
   padding-top:20px;
   padding-bottom:15px;
   padding-left:2%;
+	margin-bottom:15px;
 }
 
 .sectionPadding {
