--- a/style/style.css
+++ b/style/style.css
@@ -77,29 +77,6 @@ box-shadow: 0px 23px 30px -15px rgba(0,0,0,0.75);*/
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-
-hr {
-  border-top: dotted 1px;
-}
-
 #y0{
-  background-color: #376cf1;
-}
-#y2015{
-  background-color: #376cf1;
-}
-#y2014{
-  background-color: #376cf1;
-}
-#y2013{
-  background-color: #376cf1;
-}
-#y2012{
-  background-color: #376cf1;
-}
-#y2010{
-  background-color: #376cf1;
-}
-#y2009{
-  background-color: #376cf1;
+  background-color: #608dbd;
 }
